Update OpenAPI definition
